--- a/Iniciar sesion.html
+++ b/Iniciar sesion.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style_IniciarSesion.css" />
+    <link rel="stylesheet" href="/css/style_IniciarSesion.css" />
   </head>
   <body>
     <!-- Barra de navegación -->
@@ -18,7 +18,7 @@
       <div class="container">
         <!-- Logo y título -->
         <a class="navbar-brand d-flex align-items-center" href="/Peliculas.html">
-          <img src="oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
+          <img src="/img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
         </a>
         <!-- Botón de Hamburguesa -->
         <button
@@ -41,13 +41,13 @@
               <a class="nav-link" href="/Registrarse.html">Registrarse</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Películas</a>
+              <a class="nav-link" href="/Peliculas.html">Películas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Miembros</a>
+              <a class="nav-link" href="/Miembros.html">Miembros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="/Nosotros.html">Nosotros</a>
             </li>
           </ul>
           <!-- Barra de búsqueda -->
@@ -68,7 +68,7 @@
       <div class="login-container">
         <div class="login-card">
             <div class="login-header text-center">
-                <img src="/profileblankfoto.webp" alt="Usuario" class="user-icon">
+                <img src="/img/profileblankfoto.webp" alt="Usuario" class="user-icon">
                 <h2>Iniciar Sesión</h2>
             </div>
             <form class="login-form">
