--- a/Registrarse.html
+++ b/Registrarse.html
@@ -41,16 +41,13 @@
               <a class="nav-link" href="/Iniciar sesion.html">Iniciar sesión</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Registrarse</a>
+              <a class="nav-link" href="/Peliculas.html">Películas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Películas</a>
+              <a class="nav-link" href="/Miembros.html">Miembros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Miembros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="/Nosotros.html">Nosotros</a>
             </li>
           </ul>
           <!-- Barra de búsqueda -->
@@ -66,15 +63,7 @@
         </div>
       </div>
     </nav>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Registro</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+    
         <div class="register-container">
             <form class="register-card">
                 <h2 class="register-header">Registro</h2>
@@ -112,8 +101,6 @@
       <a href="#" class="support-link">Soporte</a>
   </footer>
     
-
-
     <script src="/bootstrap.bundle.min.js"></script>
 </body>
 </html>
