Agregue el inicio
Agregue la pagina de inicio y corregí un error en la navbar en las paginas de usuarios

--- a/Gestion_usuario.html
+++ b/Gestion_usuario.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
           <!-- Logo y título -->
-          <a class="navbar-brand d-flex align-items-center" href="#">
+          <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="/img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
           </a>
           <!-- Botón de Hamburguesa -->
@@ -88,7 +88,7 @@
                                 <img src="https://via.placeholder.com/100x150" alt="Película 3">
                             </div>
                         </div>
-                        <span class="edit-icon" style="color: #007bff;"><a href="#confirmModal">✎</a></span>
+                        <span class="edit-icon" ><a href="#confirmModal">✎</a></span>
                     </div>
                 </div>
                 
@@ -97,7 +97,7 @@
                     <div class="edit-section">
                         <h4>
                             Editar 
-                            <span class="edit-icon" style="color: #007bff;"><a href="editar_info.html">✎</a></span>
+                            <span class="edit-icon" ><a href="editar_info.html">✎</a></span>
                         </h4>
                         <p class="text-muted">Correo electrónico</p>
                         <input type="text" class="form-control" value="MigueLuis69@hotmail.com" disabled>
