--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <!-- Logo y título -->
-          <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="/img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
+        <!-- Logo y título -->
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <img src="img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
           </a>
           <!-- Botón de Hamburguesa -->
           <button
@@ -23,7 +23,7 @@
             aria-controls="navbarNav"
             aria-expanded="false"
             aria-label="Toggle navigation"
-          >
+        >
             <span class="navbar-toggler-icon"></span>
           </button>
   
@@ -32,16 +32,16 @@
             <!-- Opciones del menú -->
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/Gestion_usuario.html">Perfil</a>
+                <a class="nav-link" href="Gestion_usuario.html">Perfil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Peliculas.html">Películas</a>
+                <a class="nav-link" href="Peliculas.html">Películas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Miembros.html">Miembros</a>
+                <a class="nav-link" href="Miembros.html">Miembros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Nosotros.html">Nosotros</a>
+                <a class="nav-link" href="Nosotros.html">Nosotros</a>
               </li>
             </ul>
             <!-- Barra de búsqueda -->
