--- a/Iniciar sesion.html
+++ b/Iniciar sesion.html
@@ -18,7 +18,7 @@
       <div class="container">
         <!-- Logo y título -->
         <a class="navbar-brand d-flex align-items-center" href="Peliculas.html">
-          <img src="img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
+          <img src="/img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
         </a>
         <!-- Botón de Hamburguesa -->
         <button
