--- a/Peliculas.html
+++ b/Peliculas.html
@@ -1,11 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peliculas</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Iniciar Sesion</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/Style_Peliculas.css" />
+  </head>
+  <body>
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <!-- Logo y título -->
+        <a class="navbar-brand d-flex align-items-center" href="Peliculas.html">
+          <img src="/img/oso.jpg" alt="Logo" class="logo-img" />CINE_FILOS
+        </a>
+        <!-- Botón de Hamburguesa -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menú colapsable -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Opciones del menú -->
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="Registrarse.html">Registrarse</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Peliculas.html">Películas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Miembros.html">Miembros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Nosotros.html">Nosotros</a>
+            </li>
+          </ul>
+          <!-- Barra de búsqueda -->
+          <form class="search-form d-flex position-relative">
+            <input
+              class="form-control"
+              type="search"
+              placeholder="Buscar"
+              aria-label="Buscar"
+            />
+            <button class="btn btn-search" type="submit">🔍</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+      <!-- Contenedor de filtros y contenido -->
+<div class="container py-4">
+    <!-- Filtros -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <div>
+            <select class="form-select d-inline-block w-auto me-2" aria-label="Orden">
+                <option selected>Orden</option>
+                <option value="1">Ascendente</option>
+                <option value="2">Descendente</option>
+            </select>
+            <select class="form-select d-inline-block w-auto me-2" aria-label="Genero">
+                <option selected>Género</option>
+                <option value="1">Acción</option>
+                <option value="2">Comedia</option>
+            </select>
+            <select class="form-select d-inline-block w-auto" aria-label="Año">
+                <option selected>Año</option>
+                <option value="1">2023</option>
+                <option value="2">2024</option>
+            </select>
+        </div>
+    </div>
+
+    <!-- Grid de películas -->
+    <div class="row g-3">
+        <!-- Tarjetas de películas -->
+        <div class="col-6 col-md-4 col-lg-3">
+            <a href="movie1.html" class="movie-card">
+                <img src="/img/peliculas1.jpg" alt="Movie 1">
+            </a>
+        </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie2.html" class="movie-card">
+                    <img src="/img/peliculas2.jpg" alt="Movie 2">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie3.html" class="movie-card">
+                    <img src="/img/peliculas3.jpg" alt="Movie 3">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie4.html" class="movie-card">
+                    <img src="/img/peliculas4.jpg" alt="Movie 4">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie5.html" class="movie-card">
+                    <img src="/img/peliculas5.jpg" alt="Movie 5">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie6.html" class="movie-card">
+                    <img src="/img/peliculas6.jpg" alt="Movie 6">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie7.html" class="movie-card">
+                    <img src="/img/peliculas7.jpg" alt="Movie 7">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie8.html" class="movie-card">
+                    <img src="/img/peliculas8.jpg" alt="Movie 8">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie9.html" class="movie-card">
+                    <img src="/img/peliculas9.jpg" alt="Movie 9">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie10.html" class="movie-card">
+                    <img src="/img/peliculas10.jpg" alt="Movie 10">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie11.html" class="movie-card">
+                    <img src="/img/peliculas11.jpg" alt="Movie 11">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <a href="movie12.html" class="movie-card">
+                    <img src="/img/peliculas12.jpg" alt="Movie 12">
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Pie de página -->
+    <footer class="text-end footer-support">
+        <a href="#" class="support-link">Soporte</a>
+    </footer>
+
+    <script src="/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
