Pagina soporte creada, junto a su CSS e intente crear el js pero no funciono

--- a/Miembros.html
+++ b/Miembros.html
@@ -132,7 +132,7 @@
 
     <!-- Pie de página -->
     <footer class="text-end footer-support">
-        <a href="#" class="support-link">Soporte</a>
+        <a href="/Soporte.html" class="support-link">Soporte</a>
     </footer>
 
     <script src="/bootstrap.bundle.min.js"></script>
