--- a/Peliculas.html
+++ b/Peliculas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar Sesion</title>
+    <title>Peliculas</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Bootstrap CSS -->
     <link
@@ -91,62 +91,62 @@
     <div class="row g-3">
         <!-- Tarjetas de películas -->
         <div class="col-6 col-md-4 col-lg-3">
-            <a href="movie1.html" class="movie-card">
+            <a href="/peliculas/peli1.html" class="movie-card">
                 <img src="/img/peliculas1.jpg" alt="Movie 1">
             </a>
         </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie2.html" class="movie-card">
+                <a href="/peliculas/peli2.html" class="movie-card">
                     <img src="/img/peliculas2.jpg" alt="Movie 2">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie3.html" class="movie-card">
+                <a href="/peliculas/peli3.html" class="movie-card">
                     <img src="/img/peliculas3.jpg" alt="Movie 3">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie4.html" class="movie-card">
+                <a href="/peliculas/peli4.html" class="movie-card">
                     <img src="/img/peliculas4.jpg" alt="Movie 4">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie5.html" class="movie-card">
+                <a href="/peliculas/peli5.html" class="movie-card">
                     <img src="/img/peliculas5.jpg" alt="Movie 5">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie6.html" class="movie-card">
+                <a href="/peliculas/peli6.html" class="movie-card">
                     <img src="/img/peliculas6.jpg" alt="Movie 6">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie7.html" class="movie-card">
+                <a href="/peliculas/peli7.html" class="movie-card">
                     <img src="/img/peliculas7.jpg" alt="Movie 7">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie8.html" class="movie-card">
+                <a href="/peliculas/peli8.html" class="movie-card">
                     <img src="/img/peliculas8.jpg" alt="Movie 8">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie9.html" class="movie-card">
+                <a href="/peliculas/peli9.html" class="movie-card">
                     <img src="/img/peliculas9.jpg" alt="Movie 9">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie10.html" class="movie-card">
+                <a href="/peliculas/peli10.html" class="movie-card">
                     <img src="/img/peliculas10.jpg" alt="Movie 10">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie11.html" class="movie-card">
+                <a href="/peliculas/peli11.html" class="movie-card">
                     <img src="/img/peliculas11.jpg" alt="Movie 11">
                 </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <a href="movie12.html" class="movie-card">
+                <a href="/peliculas/peli12.html" class="movie-card">
                     <img src="/img/peliculas12.jpg" alt="Movie 12">
                 </a>
             </div>
