--- a/Miembros.html
+++ b/Miembros.html
@@ -72,8 +72,8 @@
             <img src="/img/verificado.png" alt="Icono de destacado" class="icono-destacado" />
           </h2>
           <div class="actions">
-            <a href="#" class="btn btn-outline-success me-2">Registrarse</a>
-            <a href="#" class="btn btn-outline-success">Iniciar sesión</a>
+            <a href="/Registrarse.html" class="btn btn-outline-success me-2">Registrarse</a>
+            <a href="/Iniciar sesion.html" class="btn btn-outline-success">Iniciar sesión</a>
           </div>
         </div>
         <div class="miembros-list">
