--- a/Soporte.html
+++ b/Soporte.html
@@ -62,13 +62,13 @@
         <h2>Preguntas Frecuentes</h2>
         <div class="faq">
             <h3><strong>¿Cómo puedo restablecer mi contraseña?</strong></h3>
-            <p>Para restablecer tu contraseña, ve a la página de inicio de sesión y haz clic en "Olvidé mi contraseña".</p>
+            <p class="faq-answer">Para restablecer tu contraseña, ve a la página de inicio de sesión y haz clic en "Olvidé mi contraseña".</p>
             <h3><strong>¿Cómo puedo contactar al soporte?</strong></h3>
-            <p>Puedes contactar al soporte a través del formulario de contacto a continuación o enviando un correo a CINE_FILOS_SOPORTE@hotmail.com.</p>
+            <p class="faq-answer">Puedes contactar al soporte a través del formulario de contacto a continuación o enviando un correo a CINE_FILOS_SOPORTE@hotmail.com.</p>
             <h3><strong>¿Para que sirve esta página?</strong></h3>
-            <p>Esta pagina es para que los usuarios puedan opinar de sus peliculas favoritas y poder ver las opiniones de otros usuarios.</p>
+<p class="faq-answer">Esta pagina es para que los usuarios puedan opinar de sus peliculas favoritas y poder ver las opiniones de otros usuarios.</p>
         </div>
         <script src="/bootstrap.bundle.min.js"></script>
-        <script src="JS/JS_soporte"></script>
+        <script src="JS/JS_soporte.js"></script>
     </body>
 </html>
