--- a/peliculas/peli1.html
+++ b/peliculas/peli1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar Sesion</title>
+    <title>KINDS OF KINDESS</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Bootstrap CSS -->
     <link
@@ -60,6 +60,21 @@
             />
             <button class="btn btn-search" type="submit">🔍</button>
           </form>
+      <!-- Foto de perfil y menú -->
+      <div class="profile-menu dropdown">
+        <img
+          src="/img/profileblankfoto.webp"
+          alt="Foto de perfil"
+          class="profile-img dropdown-toggle"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        />
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item" href="/Iniciar sesion.html">Iniciar sesión</a></li>
+          <li><a class="dropdown-item" href="/Registrarse.html">Registrarse</a></li>
+          <li><a class="dropdown-item" href="Ajustes.html">Ajustes</a></li>
+        </ul>
+      </div>
         </div>
       </div>
     </nav>
