--- a/peliculas/peli2.html
+++ b/peliculas/peli2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar Sesion</title>
+    <title>Deadpool y Wolverine</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Bootstrap CSS -->
     <link
@@ -60,6 +60,21 @@
             />
             <button class="btn btn-search" type="submit">🔍</button>
           </form>
+          <!-- Foto de perfil y menú -->
+      <div class="profile-menu dropdown">
+        <img
+          src="/img/profileblankfoto.webp"
+          alt="Foto de perfil"
+          class="profile-img dropdown-toggle"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        />
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item" href="/Iniciar sesion.html">Iniciar sesión</a></li>
+          <li><a class="dropdown-item" href="/Registrarse.html">Registrarse</a></li>
+          <li><a class="dropdown-item" href="Ajustes.html">Ajustes</a></li>
+        </ul>
+      </div>
         </div>
       </div>
     </nav>
@@ -148,7 +163,7 @@
           <div class="col-md-3">
             <h5 class="mb-3">Sinopsis:</h5>
             <p>
-                Kinds of Kindness es una película que se describe como una "fábula tríptico", lo que significa que está dividida en tres historias distintas pero interconectadas. Cada una de estas historias explora diferentes facetas de las relaciones humanas, el poder, el control y la búsqueda de significado.
+              La combinación de Deadpool y Wolverine en la pantalla grande ha sido una de las más esperadas por los fanáticos de los cómics. Estos dos personajes, conocidos por sus personalidades carismáticas, habilidades sobrehumanas y un humor muy particular, han generado una gran expectativa.
             </p>
           </div>
         </div>
