--- a/peliculas/peli3.html
+++ b/peliculas/peli3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar Sesion</title>
+    <title>Beetlejuice</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Bootstrap CSS -->
     <link
@@ -60,6 +60,21 @@
             />
             <button class="btn btn-search" type="submit">🔍</button>
           </form>
+          <!-- Foto de perfil y menú -->
+      <div class="profile-menu dropdown">
+        <img
+          src="/img/profileblankfoto.webp"
+          alt="Foto de perfil"
+          class="profile-img dropdown-toggle"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        />
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item" href="/Iniciar sesion.html">Iniciar sesión</a></li>
+          <li><a class="dropdown-item" href="/Registrarse.html">Registrarse</a></li>
+          <li><a class="dropdown-item" href="Ajustes.html">Ajustes</a></li>
+        </ul>
+      </div>
         </div>
       </div>
     </nav>
@@ -145,7 +160,7 @@
           <div class="col-md-3">
             <h5 class="mb-3">Sinopsis:</h5>
             <p>
-                Kinds of Kindness es una película que se describe como una "fábula tríptico", lo que significa que está dividida en tres historias distintas pero interconectadas. Cada una de estas historias explora diferentes facetas de las relaciones humanas, el poder, el control y la búsqueda de significado.
+              Beetlejuice es una comedia de terror sobrenatural dirigida por Tim Burton. La película cuenta la historia de una pareja recién fallecida que se muda al más allá, pero no está dispuesta a dejar su amada casa. Para ahuyentar a los nuevos propietarios, contratan a un extravagante y excéntrico fantasma llamado Beetlejuice, quien a través de travesuras y caos intenta asustarlos lo suficiente para que abandonen la propiedad.
             </p>
           </div>
         </div>
