--- a/Nosotros.html
+++ b/Nosotros.html
@@ -60,6 +60,20 @@
             />
             <button class="btn btn-search" type="submit">🔍</button>
           </form>
+          <div class="profile-menu dropdown ms-3">
+            <img
+              src="/img/profileblankfoto.webp"
+              alt="Foto de perfil"
+              class="profile-img dropdown-toggle"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            />
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="/Iniciar sesion.html">Iniciar sesión</a></li>
+              <li><a class="dropdown-item" href="/Registrarse.html">Registrarse</a></li>
+              <li><a class="dropdown-item" href="/Ajustes.html">Ajustes</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
