Creacion de todos los js, chequen el js de gestion usuario

--- a/Miembros.html
+++ b/Miembros.html
@@ -154,5 +154,6 @@
     </footer>
 
     <script src="/bootstrap.bundle.min.js"></script>
+    <script src="/JS/JS_Miembros.js"></script>
   </body>
 </html>
