--- a/Peliculas.html
+++ b/Peliculas.html
@@ -177,5 +177,6 @@
     </footer>
 
     <script src="/bootstrap.bundle.min.js"></script>
+    <script src="/JS/JS_Peliculas.js"></script>
   </body>
 </html>
