--- a/Registrarse.html
+++ b/Registrarse.html
@@ -102,5 +102,6 @@
   </footer>
     
     <script src="/bootstrap.bundle.min.js"></script>
+    <script src="/JS/JS_Registro.js"></script>
 </body>
 </html>
