--- a/Gestion_usuario.html
+++ b/Gestion_usuario.html
@@ -96,7 +96,7 @@
                 <div class="col-md-3">
                     <div class="edit-section">
                         <h4>
-                            Editar 
+                            Editar
                             <span class="edit-icon" ><a href="editar_info.html">✎</a></span>
                         </h4>
                         <p class="text-muted">Correo electrónico</p>
@@ -110,7 +110,7 @@
             </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="/JS/JS_Gestion_usuario.js"></script>
 </body>
 </html>
 
