--- a/editar_info.html
+++ b/editar_info.html
@@ -87,6 +87,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="/JS/JS_editar_info.js"></script>
 </body>
 </html>
