--- a/reseñas.html
+++ b/reseñas.html
@@ -124,6 +124,6 @@
         </div>
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="/JS/JS_reseñas.js"></script>
 </body>
 </html>
